--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
     <header>
         <div class="logo">E-shop</div>
         <div class="cart">
-            <form action="#" class="search-form" @submit.prevent="filter">
-                <input type="text" class="search-field" v-model="userSearch">
-                <button type="submit" class="btn-search">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
+           <form-search v-on:search="startSearch"></form-search>
             <button class="btn-cart" type="button" @click="showCart = !showCart">Корзина</button>
 
             <cart :cart-items="cartItems"
@@ -28,13 +23,16 @@
         
     </header>
     <main>
-        <products :products="filtered" :img="imgProduct" @add-product="addProduct"></products>
+        <products v-if="renderContent" :products="filtered" :img="imgProduct" @add-product="addProduct"></products>
+        <error-component v-else></error-component>
     </main>
 </div>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/ProductComponent.js"></script>
 <script src="js/CartComponent.js"></script>
-    <script src="js/main.js"></script>
+<script src="js/SearchComponent.js"></script>
+<script src="js/ErrorComponent.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
